feat(server): packing tasks